# woki

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
ext/: CMakeLists.txt  Makefile
ext/include/wokiext/: cli.hpp
ext/src/: build.cpp  bundle.cpp  cli.cpp  commands.cpp  create.cpp  install.cpp  main.cpp  manage.cpp  schema.cpp  verify.cpp
modules/core/tests/: CMakeLists.txt
modules/core/tests/arena/: arena_tests.cpp
modules/core/tests/args/: args_tests.cpp
modules/core/tests/config/: config_tests.cpp
modules/core/tests/env/: env_tests.cpp
modules/core/tests/error/: error_tests.cpp
modules/core/tests/hash/: hash_tests.cpp
modules/core/tests/math/: io_tests.cpp  mat_tests.cpp  quat_tests.cpp  transform_tests.cpp  vec_tests.cpp
modules/core/tests/path/: path_tests.cpp
modules/core/tests/platform/: platform_tests.cpp
modules/core/tests/time/: time_tests.cpp
modules/ecs/: CMakeLists.txt
modules/ecs/include/woki/: ecs.hpp
modules/ecs/src/: registry.cpp
modules/ecs/tests/: CMakeLists.txt  entity_tests.cpp  registry_tests.cpp
modules/extension/: CMakeLists.txt
modules/extension/docs/: manifest.example.yaml  wit.md
modules/extension/schema/: manifest.schema.json
modules/extension/sdk/: README.md  ext.h  guest_alloc.h  host.h  host_imports.h  limits.h  macros.h  perm_bits.h  types.h  version.h  woki_limits.h
modules/extension/src/: archive_layout.cpp  command.cpp  manager.cpp  manifest.cpp  package.cpp  path_safety.cpp  perm.cpp  registry.cpp  runtime.cpp
modules/extension/src/host/: api.cpp  cabi.cpp
modules/extension/src/wasm/: backend.cpp  guest_module.cpp  wasmtime_engine.cpp  web_engine.cpp
modules/extension/tests/: CMakeLists.txt  archive_layout_tests.cpp  cabi_tests.cpp  guest_module_tests.cpp  host_tests.cpp  manager_tests.cpp  manifest_tests.cpp  package_tests.cpp  path_safety_tests.cpp  perm_tests.cpp  registry_tests.cpp  runtime_tests.cpp  wasm_backend_tests.cpp  wasm_test_compiler.hpp  wasmtime_engine_tests.cpp
modules/extension/web/: woki_ext.js
modules/extension/wit/: guest.wit  host.wit  world.wit
modules/gfx/: CMakeLists.txt
modules/gfx/backend/wgpu/: common.hpp  wgpu_adapter.cpp  wgpu_adapter.hpp  wgpu_device.cpp  wgpu_device.hpp  wgpu_instance.cpp  wgpu_instance.hpp  wgpu_surface.cpp  wgpu_surface.hpp  wgpu_surface_macos.mm  wgpu_swapchain.cpp  wgpu_swapchain.hpp
modules/gfx/docs/: flow.md
modules/gfx/docs/arhitecture/: README.md
modules/gfx/include/woki/: gfx.hpp  materials.hpp  resources.hpp  shaders.hpp
modules/gfx/shaders/: bloom_blur.wgsl  bloom_composite.wgsl  bloom_threshold.wgsl  depth_masked.wgsl  depth_masked_skinned.wgsl  depth_skinned.wgsl  fullscreen_triangle.wgsl  pbr_environment_forward.wgsl  pbr_forward.wgsl  pbr_full_forward.wgsl  pbr_full_skinned_forward.wgsl  pbr_shadowed_forward.wgsl  pbr_skinned_forward.wgsl  pbr_textured_forward.wgsl  tone_map.wgsl  unlit.wgsl
modules/gfx/shaders/include/: environment_data.wgsl  lighting.wgsl  object.wgsl  object_data.wgsl  pbr_brdf.wgsl  pbr_full_surface.wgsl  shadow_data.wgsl  skinning.wgsl
modules/gfx/src/animation/: animation.cpp
modules/gfx/src/api/: instance.cpp
modules/gfx/src/draw/: draw_encoder.cpp  draw_state.cpp  standard_draw_bindings.cpp
modules/gfx/src/feature/: bloom_feature.cpp  cascaded_shadow_feature.cpp  depth_prepass_feature.cpp  forward_render_feature.cpp  post_process_feature.cpp  shadow_render_feature.cpp
modules/gfx/src/frame/: render_frame_planner.cpp
modules/gfx/src/graph/: render_feature.cpp  render_graph.cpp  rhi_render_graph.cpp
modules/gfx/src/lighting/: environment.cpp  light.cpp
modules/gfx/src/material/: material.cpp  material_manager.cpp  material_parameter_layout.cpp  standard_material_resources.cpp
modules/gfx/src/mesh/: mesh_manager.cpp
modules/gfx/src/pipeline/: material_pipeline_resolver.cpp  pipeline_manager.cpp  standard_material_pipeline.cpp
modules/gfx/src/renderer/: gpu_frame_profiler.cpp  gpu_frame_profiler.hpp  renderer.cpp
modules/gfx/src/resource/: frame_uniform_buffer.cpp  frame_upload_arena.cpp  gpu_resource.cpp  gpu_resource_manager.cpp  resource_pool.hpp  resource_registry.hpp
modules/gfx/src/resources/: resources.cpp
modules/gfx/src/scene/: render_queue.cpp  render_scene.cpp
modules/gfx/src/shader/: file_shader_include_provider.cpp  preprocesor.cpp  shader_dependency_graph.cpp  shader_file_watcher.cpp  shader_hot_reload.cpp  shader_interface.cpp  shader_manager.cpp  shader_preprocessor.cpp  standard_shader_library.cpp
modules/gfx/src/visibility/: frustum.cpp
modules/gfx/src/window/: window.cpp  window_icon_data.hpp
modules/gfx/tests/: CMakeLists.txt
modules/gfx/tests/animation/: animation_tests.cpp
modules/gfx/tests/draw/: draw_encoder_tests.cpp  draw_state_tests.cpp
modules/gfx/tests/feature/: bloom_feature_tests.cpp  cascaded_shadow_feature_tests.cpp  depth_prepass_feature_tests.cpp  post_process_feature_tests.cpp  shadow_render_feature_tests.cpp
modules/gfx/tests/frame/: render_frame_planner_tests.cpp
modules/gfx/tests/graph/: render_feature_tests.cpp  render_graph_tests.cpp
modules/gfx/tests/lighting/: environment_tests.cpp  light_tests.cpp
modules/gfx/tests/material/: material_parameter_layout_tests.cpp  material_tests.cpp  standard_material_resources_tests.cpp
modules/gfx/tests/mesh/: mesh_tests.cpp
modules/gfx/tests/pipeline/: material_pipeline_resolver_tests.cpp  pipeline_tests.cpp  standard_material_pipeline_tests.cpp
modules/gfx/tests/renderer/: gpu_frame_profiler_tests.cpp
modules/gfx/tests/resource/: frame_upload_arena_tests.cpp  gpu_resource_tests.cpp  resource_handle_tests.cpp  resource_pool_tests.cpp  resource_registry_tests.cpp
modules/rhi/: CMakeLists.txt
modules/rhi/src/: render_graph.cpp  swapchain.cpp
studio/: CMakeLists.txt
studio/src/: entry.hpp  main.cpp
studio/src/core/: application.cpp  application.hpp  context.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
studio/src/layers/: extension.cpp  extension.hpp  render.cpp  render.hpp
studio/src/renderer/: rhi_renderer.cpp  rhi_renderer.hpp
(+280 files in other folders)
