set(_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(_ASSETS_DIR "${CMAKE_SOURCE_DIR}/assets")
set(_CFG_DIR "${CMAKE_SOURCE_DIR}/config")
set(_ICONS_DIR "${_CFG_DIR}/icons")
set(_DEFAULT_CONFIG "${_CFG_DIR}/conf/studio.yaml")

file(GLOB_RECURSE _HEADERS
    CONFIGURE_DEPENDS
    "${_SRC_DIR}/*.h"
    "${_SRC_DIR}/*.hpp"
)

file(GLOB_RECURSE _SOURCES
    CONFIGURE_DEPENDS
    "${_SRC_DIR}/*.cpp"
)

add_executable(studio
    ${_HEADERS}
    ${_SOURCES}
)

target_compile_features(studio PRIVATE cxx_std_23)
apply_compiler_options(studio)

target_compile_definitions(studio
    PRIVATE
        _VERSION="${PROJECT_VERSION}"
)

target_include_directories(studio
    PRIVATE
        "${_SRC_DIR}"
)

set(_DEPS
    woki::core
    woki::gfx
    woki::rhi
    woki::extension
)

if(EMSCRIPTEN)
    message(STATUS "Building studio for web")

    set(CMAKE_EXECUTABLE_SUFFIX ".html")

    set(_WEB_ASSETS_MOUNT "/assets")
    set(_WEB_CONFIG_MOUNT "/config")

    target_compile_definitions(studio
        PRIVATE
            __WEB
            __WEBGPU_TEST
            WOKI_HAS_DAWN
            WEBGPU_BACKEND_EMSCRIPTEN
    )

    if(NOT DEFINED EMDAWNWEBGPU_PORT OR EMDAWNWEBGPU_PORT STREQUAL "")
        set(_WGPU_PORT "emdawnwebgpu")
        message(STATUS "Using Emscripten WebGPU port: ${_WGPU_PORT}")
    else()
        set(_WGPU_PORT "${EMDAWNWEBGPU_PORT}")
        message(STATUS "Using external emdawnwebgpu port: ${_WGPU_PORT}")
    endif()

    target_compile_options(studio
        PRIVATE
            "--use-port=${_WGPU_PORT}"
    )

    if(EXISTS "${_ASSETS_DIR}")
        target_link_options(studio
            PRIVATE
                "SHELL:--preload-file ${_ASSETS_DIR}@${_WEB_ASSETS_MOUNT}"
        )

        target_compile_definitions(studio
            PRIVATE
                WOKI_ASSETS_DIR="${_WEB_ASSETS_MOUNT}"
        )
    else()
        message(WARNING "Assets directory does not exist: ${_ASSETS_DIR}")
    endif()

    if(EXISTS "${_CFG_DIR}")
        target_link_options(studio
            PRIVATE
                "SHELL:--preload-file ${_CFG_DIR}@${_WEB_CONFIG_MOUNT}"
        )
    endif()

    target_link_options(studio
        PRIVATE
            "--use-port=${_WGPU_PORT}"
            "-sUSE_GLFW=3"
            "-sASYNCIFY"
            "-sALLOW_MEMORY_GROWTH=1"
            "-sASSERTIONS=1"
            "-sNO_DISABLE_EXCEPTION_CATCHING"
            "--js-library"
            "${CMAKE_SOURCE_DIR}/modules/extension/web/woki_ext.js"
            "--shell-file"
            "${CMAKE_SOURCE_DIR}/web/index.html"
    )

    set(_EXT_DIR "${CMAKE_SOURCE_DIR}/extensions")

    if(EXISTS "${_EXT_DIR}")
        target_link_options(studio
            PRIVATE
                "SHELL:--preload-file ${_EXT_DIR}@/extensions"
        )

        target_compile_definitions(studio
            PRIVATE
                WOKI_SOURCE_EXTENSIONS_DIR="/extensions"
        )
    endif()

    set_target_properties(studio
        PROPERTIES
            OUTPUT_NAME "studio"
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
    )

    add_custom_command(
        TARGET studio
        POST_BUILD
        COMMAND
            ${CMAKE_COMMAND} -E copy_if_different
            "${CMAKE_SOURCE_DIR}/web/favicon.svg"
            "${CMAKE_BINARY_DIR}/favicon.svg"
        COMMAND
            ${CMAKE_COMMAND} -E copy_if_different
            "${_ICONS_DIR}/favicon.ico"
            "${CMAKE_BINARY_DIR}/favicon.ico"
        COMMAND
            ${CMAKE_COMMAND} -E copy_if_different
            "${_ICONS_DIR}/apple-touch-icon.png"
            "${CMAKE_BINARY_DIR}/apple-touch-icon.png"
        COMMAND
            ${CMAKE_COMMAND} -E copy_if_different
            "${_ICONS_DIR}/woki-32.png"
            "${CMAKE_BINARY_DIR}/woki-32.png"
        COMMAND
            ${CMAKE_COMMAND} -E copy_if_different
            "${_ICONS_DIR}/woki-64.png"
            "${CMAKE_BINARY_DIR}/woki-64.png"
        COMMAND
            ${CMAKE_COMMAND} -E copy_if_different
            "${CMAKE_SOURCE_DIR}/web/woki-sad.svg"
            "${CMAKE_BINARY_DIR}/woki-sad.svg"
    )
else()
    message(STATUS "Building studio for native")

    target_compile_definitions(studio
        PRIVATE
            WOKI_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
            WOKI_ASSETS_DIR="${_ASSETS_DIR}"
            WOKI_SYSTEM_CONFIG_DIR="${CMAKE_INSTALL_FULL_SYSCONFDIR}/woki"
    )

    find_package(Threads REQUIRED)

    list(APPEND _DEPS
        Threads::Threads
        msdfgen::msdfgen
    )

    if(NOT TARGET dawn::webgpu_dawn)
        find_package(Dawn CONFIG QUIET)
    endif()

    if(TARGET dawn::webgpu_dawn)
        message(STATUS "Dawn found - enabling WebGPU renderer")

        list(APPEND _DEPS
            dawn::webgpu_dawn
        )

        target_compile_definitions(studio
            PRIVATE
                WOKI_HAS_DAWN
        )
    elseif(TARGET webgpu_dawn)
        message(STATUS "Dawn found (legacy target) - enabling WebGPU renderer")

        list(APPEND _DEPS
            webgpu_dawn
        )

        target_compile_definitions(studio
            PRIVATE
                WOKI_HAS_DAWN
        )
    else()
        message(STATUS "Dawn not found - building studio without WebGPU renderer")
    endif()

    set_target_properties(studio
        PROPERTIES
            OUTPUT_NAME "studio"
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    )

    if(APPLE)
        set_target_properties(studio
            PROPERTIES
                MACOSX_BUNDLE ON
        )
    endif()
endif()

target_link_libraries(studio
    PRIVATE
        ${_DEPS}
)

install(
    TARGETS studio
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    BUNDLE DESTINATION "${CMAKE_INSTALL_BINDIR}"
)

if(EXISTS "${_ASSETS_DIR}" AND NOT EMSCRIPTEN)
    install(
        DIRECTORY "${_ASSETS_DIR}/"
        DESTINATION "${CMAKE_INSTALL_DATADIR}/woki/assets"
    )

    add_custom_command(
        TARGET studio
        POST_BUILD
        COMMAND
            ${CMAKE_COMMAND} -E copy_directory
            "${_ASSETS_DIR}"
            "${CMAKE_BINARY_DIR}/bin/assets"
        COMMENT "Copying studio assets"
    )
endif()

if(EXISTS "${_ICONS_DIR}/woki.svg" AND NOT EMSCRIPTEN)
    install(
        DIRECTORY "${_ICONS_DIR}/"
        DESTINATION "${CMAKE_INSTALL_DATADIR}/woki/icons"
        FILES_MATCHING
            REGEX ".*\\.(png|svg|ico)$"
    )
endif()

if(EXISTS "${_DEFAULT_CONFIG}" AND NOT EMSCRIPTEN)
    install(
        FILES "${_DEFAULT_CONFIG}"
        DESTINATION "${CMAKE_INSTALL_SYSCONFDIR}/woki"
    )

    add_custom_target(
        studio_config ALL
        COMMAND
            ${CMAKE_COMMAND} -E copy_directory
            "${_CFG_DIR}"
            "${CMAKE_BINARY_DIR}/bin/config"
        DEPENDS
            "${_DEFAULT_CONFIG}"
        COMMENT
            "Copying studio config"
    )

    if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
        set(_USER_CONFIG_ROOT "$ENV{XDG_CONFIG_HOME}")

        if(_USER_CONFIG_ROOT STREQUAL "")
            set(_USER_CONFIG_ROOT "$ENV{HOME}/.config")
        endif()

        if(NOT _USER_CONFIG_ROOT STREQUAL "")
            add_custom_command(
                TARGET studio
                POST_BUILD
                COMMAND
                    ${CMAKE_COMMAND}
                    -D SOURCE_FILE="${_DEFAULT_CONFIG}"
                    -D DEST_FILE="${_USER_CONFIG_ROOT}/woki/studio.yaml"
                    -P "${CMAKE_SOURCE_DIR}/cmake/CopyDefaultFile.cmake"
            )
        endif()
    endif()
endif()
